Add boilerplate config and setup for watchlist rest api endpoint improvments
