# settings/routes.php
@@ -172,7 +172,9 @@ function addApiRoutes(RouterService $routerService, FastRoute\RouteCollector $ro
     $routes->add('DELETE', '/users/{username:[a-zA-Z0-9]+}/history/movies', [Api\HistoryController::class, 'deleteFromHistory'], [Api\Middleware\IsAuthorizedToWriteUserData::class]);
     $routes->add('PUT', '/users/{username:[a-zA-Z0-9]+}/history/movies', [Api\HistoryController::class, 'updateHistory'], [Api\Middleware\IsAuthorizedToWriteUserData::class]);
 
-    $routes->add('GET', '/users/{username:[a-zA-Z0-9]+}/watchlist', [Api\WatchlistController::class, 'getWatchlist'], [Api\Middleware\IsAuthorizedToReadUserData::class]);
+    $routes->add('GET', '/users/{username:[a-zA-Z0-9]+}/watchlist/movies', [Api\WatchlistController::class, 'getWatchlist'], [Api\Middleware\IsAuthorizedToReadUserData::class]);
+    $routes->add('POST', '/users/{username:[a-zA-Z0-9]+}/watchlist/movies', [Api\HistoryController::class, 'addToWatchlist'], [Api\Middleware\IsAuthorizedToWriteUserData::class]);
+    $routes->add('DELETE', '/users/{username:[a-zA-Z0-9]+}/watchlist/movies', [Api\HistoryController::class, 'deleteFromWatchlist'], [Api\Middleware\IsAuthorizedToWriteUserData::class]);
 
     $routerService->addRoutesToRouteCollector($routeCollector, $routes);
 }
